Fixed fleet CSS. Improved code readability

--- a/src/App.css
+++ b/src/App.css
@@ -423,58 +423,58 @@ input[type="radio"]:checked {
 }
 
 
-/* Car booking section */
+/* Fleet section */
 
+.fleet {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
 .fleetContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
-  margin: 140px 250px;
-  margin-bottom: 150px;
-  flex: 1;
 }
-.containerTexts {
+.fleetTxt {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   margin-bottom: 50px;
 }
-.containerTexts p {
+.fleetTxt p {
   width: 60%;
+  margin-bottom: 2.1rem;
 }
-.containerTexts h1 {
+.fleetTxt h1 {
   margin-bottom: 2.1rem;
 }
 .carSelections {
   display: flex;
-  width: 100%;
-  height: 300px;
-  gap: 20px;
+  gap: 30px;
+  height: 400px;
 }
 .carsSelect {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: flex;
+  flex-direction: column;
   grid-gap: 0.2rem;
-  height: 100%;
 }
 .carsSelect button {
   font-size: 20px;
   text-align: left;
-  padding: 1rem 1rem;
+  padding: 1rem;
   font-weight: 600;
-  width: 260px;
   background-color: #f3f3f3;
   color: #000;
   border: none;
-  margin: 0;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
   transition: all 0.2s;
   cursor: pointer;
-  max-height: 100%;
-  min-width: 100%;
   white-space: nowrap;
+  height: 100%;
 }
 .carsSelect button:hover {
   background-color: #3b6fcf;
@@ -488,7 +488,6 @@ input[type="radio"]:checked {
   width: 800px;
   height: 100%;
   box-sizing: border-box;
-  position: relative;
 }
 .carPic img {
   width: 100%;
@@ -499,10 +498,7 @@ input[type="radio"]:checked {
 .carDetails {
   display: grid;
   font-size: 16px;
-  height: 400px;
-  max-height: 100%;
   white-space: nowrap;
-  float: left;
   width: 290px;
 }
 .row {
@@ -518,7 +514,8 @@ input[type="radio"]:checked {
   text-align: right;
   white-space: nowrap;
 }
-.reserveButton, .reserveButton a {
+.reserveButton,
+.reserveButton a {
   font-size: 20px;
   font-weight: 700;
   border-radius: 5px;
